# rustysquid

./: .clippy.toml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  Makefile  Makefile.safety  QUALITY_REPORT.md  README.md  RELEASE_CHECKLIST.md  build.sh  check_deps.sh  clippy.toml  deploy-safe.sh  deploy_to_router.sh  fix_quality.sh  init-rustysquid.sh  init.d_rustysquid  pmat_quality_check.sh  publish.sh  quality_check.sh  run_quality_checks.sh  rustfmt.toml  smoke-test.test.ts  smoke-test.ts  test_all_commands.sh  verify_proxy.sh
.github/workflows/: ci.yml  release.yml  rust.yml
docs/todo/: minimal-safety-features-port-squid.md
examples/: basic_usage.rs  cache_demo.rs  full_proxy.rs  performance_test.rs  router_config.sh  simple_proxy.rs
src/: connection_pool.rs  lib.rs  main.rs  main_backup.rs  main_refactored.rs  memory.rs
tests/: connection_limit_test.rs  integration_tests.rs  pmat_property_tests.proptest-regressions  pmat_property_tests.rs  property_tests.rs  request_limit_test.rs  test_cache_key_optimization.rs
