[package]
name = "rustysquid"
version = "1.2.0"
edition = "2021"
authors = ["Noah <noah@paiml.com>"]
description = "High-performance HTTP caching proxy optimized for embedded systems and routers"
license = "MIT"
repository = "https://github.com/paiml/rustysquid"
homepage = "https://github.com/paiml/rustysquid"
documentation = "https://docs.rs/rustysquid"
readme = "README.md"
keywords = ["cache", "proxy", "http", "router", "embedded"]
categories = ["network-programming", "caching", "web-programming::http-server"]
exclude = [
    "tests/*",
    "benches/*",
    "examples/*",
    ".github/*",
    "scripts/*",
    "docs/*",
    "Makefile*",
    ".*",
]

[dependencies]
# Minimal async runtime - single-threaded for low memory usage
tokio = { version = "1.41", features = ["rt", "net", "io-util", "time", "macros", "sync", "signal"] }
# Lightweight HTTP parsing
httparse = "1.9"
# Fast hashing for cache
xxhash-rust = { version = "0.8", features = ["xxh64"] }
# Efficient byte handling
bytes = "1.8"
# Simple LRU cache
lru = "0.12"
# Async logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Property-based testing
proptest = "1.5"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
# Async test runtime
tokio-test = "0.4"
# Benchmarking
criterion = "0.5"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Smaller panic handler

[target.aarch64-unknown-linux-musl]
linker = "aarch64-linux-musl-gcc"
